# diffusion-related-token-exp-composition

./: .gitignore  .gitmodules  README.md  Readme.md  analyze_sgga_trace_run.py  decoding.py  eval.py  eval_gsm1k.py  eval_gsm8k.py  eval_gsm8k_10402.err  eval_gsm8k_10402.out  eval_gsm8k_flip_10454.err  exp_decoding.py  gsm_common.py  main.py  make_trace_viewer.py  modeling_llada.py  pyproject.toml  run_eval_gsm1k.sh  run_eval_gsm8k.sh  run_eval_gsm8k_RC.sh  run_eval_gsm8k_flip_margin.sh  run_eval_gsm8k_flip_margin_group.sh  run_eval_gsm8k_graph_aware_sg_ga.sh  run_eval_gsm8k_graph_aware_v2.sh  run_eval_gsm8k_sgga_wino_hybrid.sh  run_exp.sh  run_experiments.py  run_search_gsm1k_GAV2.sh  run_sweep_gsm8k_ga_v2_param_ranges.sh  run_sweep_gsm8k_rc_param_ranges.sh  run_trace_gsm8k_wrong.sh  run_with_gpu_pool.py  trace_gsm8k_wrong.py
Dream/: eval_dream.py  generation_utils.py
dataset_utils/eval_correctness_mbpp/: evaluation.py
dataset_utils/eval_humaneval/: all_evaluate.py
dataset_utils/eval_humaneval/execute/: execution.py
results_axiv/hyonju/GAv2/: server2_eval_ga_v2_10513.err  server2_eval_ga_v2_10513.out  summary_graph_aware_v2.json
results_axiv/hyonju/sagga/: summary_graph_aware_sg_ga.json  ubuntu_eval_sg_ga_10664.err  ubuntu_eval_sg_ga_10664.out
results_axiv/yang/: flip_step_eval_gsm8k_10454.out
