[project]
name = "diffusion-related-token-exp-composition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "fire>=0.7.1",
    "latex2sympy2-extended>=1.11.0",
    "math-verify>=0.9.0",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "termcolor>=3.3.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
